--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,7 +51,7 @@
 
 		<div class="form-label-group">
 			<input type="text" id="inputEmail" class="form-control"
-				placeholder="Email address" name="username" required autofocus value="adm@clinica.com">
+				placeholder="Email address" name="username" required autofocus>
 			<label for="inputEmail">Email</label>
 			<div class="invalid-feedback">Use seu email cadastrado como login.</div>
 		</div>
