Adicionando o delete para o cokkie "JSESSIONID", e finalizando o curso.

--- a/src/main/resources/templates/email/confirmacao.html
+++ b/src/main/resources/templates/email/confirmacao.html
@@ -29,7 +29,7 @@ a:hover, a:active {
         <tr>
             <td align="center" style="padding: 20px 0 10px 0;">
                 <img src="cid:logo" alt="http://localhost:8080/" style="display: block; margin-left: auto; margin-right: auto; width: 15%;" />
-            	<h1 style="font-weight: 200;">Clínica Spring Security</h1>
+            	<h1 style="font-weight: 200;">Clínica Spring Security JardelDev</h1>
 				<p style="margin-bottom: 0;">Especialidades Médicas</p>
 			</td>
         </tr>
