--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 			<img class="d-block mx-auto mb-4" th:src="@{/image/spring-security.png}"
 				width="72" height="72">
 			<div class="container">
-				<h1 class="jumbotron-heading">Clínica Spring Security</h1>
+				<h1 class="jumbotron-heading">Clínica Spring Security JardelDev</h1>
 				<p class="lead text-muted">Contamos com toda a infraestrutura e
 					segurança para você e sua família.  Cadastre-se e agende suas consultas
 					com os melhores médicos da região.</p>
