--- a/src/main/resources/templates/especialidade/especialidade.html
+++ b/src/main/resources/templates/especialidade/especialidade.html
@@ -14,7 +14,7 @@
 			<img class="d-block mx-auto mb-4" th:src="@{/image/spring-security.png}"
 				width="72" height="72">
 			<div class="container">
-				<h1 class="jumbotron-heading">Clínica Spring Security</h1>
+				<h1 class="jumbotron-heading">Clínica Spring Security JardelDev</h1>
 				<p class="lead text-muted">Médicos e Especialistas</p>
 			</div>
 		</section>
