--- a/src/main/resources/templates/fragments/mensagem.html
+++ b/src/main/resources/templates/fragments/mensagem.html
@@ -11,7 +11,7 @@
 						<img class="d-block mx-auto mb-4" src="/image/spring-security.png"
 							width="72" height="72">
 						<div class="container">
-							<h1 class="jumbotron-heading">Clínica Spring Security</h1>
+							<h1 class="jumbotron-heading">Clínica Spring Security JardelDev</h1>
 							<p class="lead text-muted">Especialidades Médicas</p>
 						</div>				
 					</section>	
