--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
 		<div class="text-center mb-4">
 			<img class="mb-4" th:src="@{/image/spring-security.png}" alt=""
 				width="72" height="72">
-			<h1 class="h3 mb-3 font-weight-normal">Clínica Spring Security</h1>
+			<h1 class="h3 mb-3 font-weight-normal">Clínica Spring Security JardelDev</h1>
 
 			<p class="font-weight-lighter">Seja bem-vindo.</p>
 			<p class="text-muted">Realize seu login para continuar</p>					
